# koochooloo-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
src/koochooloo_bot/: __init__.py  analyze.py  cache.py  cli.py  client.py  config.py  fetch.py  models.py  report.py  snapshot.py
