[project]
name = "koochooloo-bot"
version = "0.1.0"
description = "Personal Instagram follower-analysis bot: ghost followers, non-mutuals, and per-post engagement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diskcache>=5.6.3",
    "instagrapi>=2.1.2",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.scripts]
koochooloo-bot = "koochooloo_bot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/koochooloo_bot"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1a1",
]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer relies on default-argument call sites that ANN/B008 dislike.
"src/koochooloo_bot/cli.py" = ["B008"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Keep the type checker strict.
possibly-missing-attribute = "error"
possibly-unresolved-reference = "error"
